Adiciona Suporte ao VercelKV

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ NUXT_ATLASSIAN_CLIENT_SECRET=
 NUXT_ATLASSIAN_JIRA_SUBDOMAIN=
 NUXT_ATLASSIAN_JIRA_API_TOKEN=
 NUXT_CLOCKWORK_API_TOKEN=
+NUXT_KV_URL=
+NUXT_KV_REST_API_URL=
+NUXT_KV_REST_API_TOKEN=
+NUXT_KV_REST_API_READ_ONLY_TOKEN=
