--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@hebilicious/authjs-nuxt": "^0.1.0",
     "@quasar/extras": "^1.16.4",
+    "@vercel/kv": "^0.2.2",
     "quasar": "^2.12.1"
   }
 }
