--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@sidebase/nuxt-auth": "^0.6.0-beta.3",
     "@types/node": "^18",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
@@ -18,14 +19,13 @@
     "prettier": "2.8.8"
   },
   "dependencies": {
-    "@auth/core": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@hebilicious/authjs-nuxt": "^0.1.0",
     "@quasar/extras": "^1.16.4",
     "@vercel/kv": "^0.2.2",
+    "next-auth": "4.21.1",
     "quasar": "^2.12.1"
   }
 }
